# tock-stm32mp157c

./: .gitignore  Cargo.toml
boards/stm32mp157c-dk2/: Cargo.toml  Makefile  README.md  build.rs  chip_layout.ld  kernel_layout.ld
boards/stm32mp157c-dk2/src/: io.rs  main.rs  resource_table.rs
chips/stm32mp1/: Cargo.toml
chips/stm32mp15xx/: Cargo.toml  README.md
chips/stm32mp15xx/src/: chip.rs  deferred_calls.rs  dma1.rs  gpio.rs  interrupt_service.rs  lib.rs  nvic.rs  rcc.rs  tim.rs  tim2.rs  trace.rs  usart.rs
remoteproc/: fw_cortex_m4.sh  print_dump.sh
