[package]
name = "stm32mp157c-dk2"
version = "0.1.0"
authors = ["Luca De Martini <luca.de.martini@protonmail.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
components = { path = "../../tock/boards/components" }
cortexm4 = { path = "../../tock/arch/cortex-m4" }
capsules = { path = "../../tock/capsules" }
kernel = { path = "../../tock/kernel", features = ["no_debug_panics"] }
stm32mp15xx = { path = "../../chips/stm32mp15xx" }
